ANDROID-47: Сетевой слой для детального вопроса (#35)
* ANDROID-47 удалил ненужный модуль example-main

* ANDROID-47 поменял названия mapper в presentation слое

* ANDROID-47 создал  data и domain части с маппингом в domain модельки

* ANDROID-47 написал тест на маппер data -> domain

* ANDROID-47 исправлены ошибки ktlint

* ANDROID-47 исправлены ошибки detekt